--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.8",
     "qrcode.react": "^4.0.1",
