--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@yudiel/react-qr-scanner": "^2.0.8",
     "firebase": "^10.14.1",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.9",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
